Fixed overflow issue, added new section.

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -106,7 +106,7 @@ nav
     line-height: 1.1
     text-transform: uppercase
     margin-bottom: 10px
-    animation: main-text-animation 1.3s ease
+    // animation: main-text-animation 1.3s ease
   p
     font-size: 1.5rem
     color: #e7e7e7
@@ -127,6 +127,7 @@ nav
 
 #portfolio
   margin: 80px 0
+  overflow-x: hidden
 
 .heading
   margin-top: 0
@@ -186,6 +187,17 @@ nav
   display: grid
   grid-template-columns: 1fr 1fr 1fr
   grid-gap: 1em
+
+#usluge
+  background: #fafafa
+  padding: 30px 0
+  .portfolio-grid
+    height: 425px
+
+.usluge-unit
+  background: pink
+  height: 100%
+  width: 100%
 
 #portfolio-container
   height: 500px
